--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,19 @@ pip-log.txt
 #Mr Developer
 .mr.developer.cfg
 site/js/cust/Framed.js
+site/img/temp-images/1.jpg
+site/img/temp-images/1.png
+site/img/temp-images/10.jpg
+site/img/temp-images/11.jpg
+site/img/temp-images/12.jpg
+site/img/temp-images/2.jpg
+site/img/temp-images/2.png
+site/img/temp-images/3.jpg
+site/img/temp-images/3.png
+site/img/temp-images/4.jpg
+site/img/temp-images/4.png
+site/img/temp-images/5.jpg
+site/img/temp-images/6.jpg
+site/img/temp-images/7.jpg
+site/img/temp-images/8.jpg
+site/img/temp-images/9.jpg
